# sam-mvp

./: .gitignore  README.md  comparison.html  conftest.py  main.py  processed_short.json  processed_with_synthesis.json  pyproject.toml  requirements.txt  result.json  run.sh  setup.py  summary.txt  test_command.sh  test_synthesis.sh
data/: lebron.txt  sample_argument.txt  short_sample.txt
docs/: concept.md  data-structure.md  implementation-plan.md  usage.md
output/Basketball G.O.A.T_20250404_122201/: comparison.html  processed_document.json  summary.txt
output/Digital Literacy Test_20250404_121517/: comparison.html  processed_document.json  summary.txt
src/: __init__.py  main.py
src/analyzers/: __init__.py  structure_analyzer.py
src/extractors/: __init__.py  pdf_extractor.py  text_extractor.py
src/models/: __init__.py  document.py
src/processors/: __init__.py  text_processor.py
src/synthesizers/: basic_synthesis.py  comparison.py
src/utils/: __init__.py  text_utils.py
tests/: __init__.py  test_comparison.py  test_pdf_extractor.py  test_structure_analyzer.py  test_text_extractor.py  test_text_processor.py
