[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first-principles-analysis"
version = "0.1.0"
description = "Text decomposition and synthesis tool"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]